--- a/Sunduk.PWA/Components/CAM/ToolTableTools/Turning/GroovingFaceToolsComponent.razor
+++ b/Sunduk.PWA/Components/CAM/ToolTableTools/Turning/GroovingFaceToolsComponent.razor
@@ -10,9 +10,9 @@
         <MudTh/>
     </HeaderContent>
     <RowTemplate>
-        <MudTd DataLabel="Позиция">@context.Position.ToolNumber()</MudTd>
-        <MudTd DataLabel="Ширина">@context.Width.ToPrettyString()</MudTd>
-        <MudTd DataLabel="Радиус">@context.CornerRadius.ToPrettyString()</MudTd>
+        <MudTd DataLabel="Позиция">T@(context.Position.ToolNumber())</MudTd>
+        <MudTd DataLabel="Ширина">@context.Width.ToPrettyString(stringOption: Util.PrettyStringOption.AsIs)мм</MudTd>
+        <MudTd DataLabel="Радиус">R@(context.CornerRadius > 0 ? context.CornerRadius.ToPrettyString() : "-")</MudTd>
         <MudTd DataLabel="Привязка">@(context.ZeroPoint == TurningGroovingTool.Point.Bottom ? "Как проходной" : "Как расточной")</MudTd>
         <MudTd DataLabel="Исполнение">@(context.Hand == Tool.ToolHand.Right ? "Правое" : "Левое")</MudTd>
         <MudTd>
@@ -21,13 +21,13 @@
     </RowTemplate>
     <RowEditingTemplate>
         <MudTd DataLabel="Позиция">
-            <MudTextField @bind-Value="@context.Position" Variant="Variant.Outlined" Margin="Margin.Dense" Format="D4" Required />
+            <MudTextField @bind-Value="@context.Position" Adornment="Adornment.Start" AdornmentText="T" Variant="Variant.Outlined" Margin="Margin.Dense" Format="D4" Required />
         </MudTd>
         <MudTd DataLabel="Ширина">
-            <MudTextField @bind-Value="@context.Width" Variant="Variant.Outlined" Margin="Margin.Dense" Converter="Util.DoubleConverter" Required />
+            <MudTextField @bind-Value="@context.Width" Adornment="Adornment.End" AdornmentText="мм" Variant="Variant.Outlined" Margin="Margin.Dense" Converter="Util.DoubleConverter" Required />
         </MudTd>
-        <MudTd DataLabel="Ширина">
-            <MudTextField @bind-Value="@context.CornerRadius" Variant="Variant.Outlined" Margin="Margin.Dense" Converter="Util.DoubleConverter" Required />
+        <MudTd DataLabel="Радиус">
+            <MudTextField @bind-Value="@context.CornerRadius" Adornment="Adornment.Start" AdornmentText="R" Variant="Variant.Outlined" Margin="Margin.Dense" Converter="Util.DoubleConverter" Required />
         </MudTd>
         <MudTd DataLabel="Привязка">
             <MudSelect T="TurningGroovingTool.Point" @bind-Value="@context.ZeroPoint" Variant="Variant.Outlined" Margin="Margin.Dense" Required>
