--- a/Sunduk.PWA/Components/CAM/ToolTableTools/Turning/ThreadingExternalToolsComponent.razor
+++ b/Sunduk.PWA/Components/CAM/ToolTableTools/Turning/ThreadingExternalToolsComponent.razor
@@ -9,9 +9,9 @@
         <MudTh/>
     </HeaderContent>
     <RowTemplate>
-        <MudTd DataLabel="Позиция">@context.Position.ToolNumber()</MudTd>
-        <MudTd DataLabel="Шаг">@context.Pitch.ToPrettyString()</MudTd>
-        <MudTd DataLabel="Угол опорной пластины">@context.Angle.ToPrettyString()</MudTd>
+        <MudTd DataLabel="Позиция">T@(context.Position.ToolNumber())</MudTd>
+        <MudTd DataLabel="Шаг">@(context.Pitch.ToPrettyString(stringOption: Util.PrettyStringOption.AsIs))мм</MudTd>
+        <MudTd DataLabel="Угол опорной пластины">@context.Angle.ToPrettyString(stringOption: Util.PrettyStringOption.AsIs)°</MudTd>
         <MudTd DataLabel="Исполнение">@(context.Hand == Tool.ToolHand.Right ? "Правое" : "Левое")</MudTd>
         <MudTd>
             <MudIconButton Class="ma-n3" Variant="Variant.Text" Icon="@Icons.Material.Outlined.RemoveCircleOutline" OnClick="(() => RemoveThreadingExternalTool(context))" />
@@ -19,13 +19,13 @@
     </RowTemplate>
     <RowEditingTemplate>
         <MudTd DataLabel="Позиция">
-            <MudTextField @bind-Value="@context.Position" Variant="Variant.Outlined" Margin="Margin.Dense" Format="D4" Required />
+            <MudTextField @bind-Value="@context.Position" Adornment="Adornment.Start" AdornmentText="T" Variant="Variant.Outlined" Margin="Margin.Dense" Format="D4" Required />
         </MudTd>
         <MudTd DataLabel="Шаг">
-            <MudTextField @bind-Value="@context.Pitch" Variant="Variant.Outlined" Margin="Margin.Dense" Converter="Util.DoubleConverter" Required />
+            <MudTextField @bind-Value="@context.Pitch" Adornment="Adornment.End" AdornmentText="мм" Variant="Variant.Outlined" Margin="Margin.Dense" Converter="Util.DoubleConverter" Required />
         </MudTd>
         <MudTd DataLabel="Угол опорной пластины">
-            <MudTextField @bind-Value="@context.Angle" Variant="Variant.Outlined" Margin="Margin.Dense" Converter="Util.DoubleConverter" Required />
+            <MudTextField @bind-Value="@context.Angle" Adornment="Adornment.End" AdornmentText="°" Variant="Variant.Outlined" Margin="Margin.Dense" Converter="Util.DoubleConverter" Required />
         </MudTd>
         <MudTd DataLabel="Исполнение">
             <MudSelect T="Tool.ToolHand" @bind-Value="@context.Hand" Variant="Variant.Outlined" Margin="Margin.Dense" Required>
