--- a/Sunduk.PWA/Components/Stuff/ThreadTurningComponent.razor
+++ b/Sunduk.PWA/Components/Stuff/ThreadTurningComponent.razor
@@ -10,11 +10,11 @@
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-3">
     <MudGrid Spacing="1">
         <MudItem xs="12" sm="6">
-            <MudSelect Label="Стандарт" T="ThreadStandart" Value="ThreadStandart" Variant="Variant.Filled" ValueChanged="OnStandartChanged">
-                <MudSelectItem Value="@(ThreadStandart.Metric)">Метрическая 60° (М)</MudSelectItem>
-                <MudSelectItem Value="@(ThreadStandart.BSPP)">Трубная цилиндрическая 55° (G)</MudSelectItem>
-                <MudSelectItem Value="@(ThreadStandart.Trapezoidal)">Трапецеидальная 30° (Tr)</MudSelectItem>
-                <MudSelectItem Value="@(ThreadStandart.NPT)">Коническая 60° (K)</MudSelectItem>
+            <MudSelect Label="Стандарт" T="ThreadStandard" Value="ThreadStandard" Variant="Variant.Filled" ValueChanged="OnStandartChanged">
+                <MudSelectItem Value="@(ThreadStandard.Metric)">Метрическая 60° (М)</MudSelectItem>
+                <MudSelectItem Value="@(ThreadStandard.BSPP)">Трубная цилиндрическая 55° (G)</MudSelectItem>
+                <MudSelectItem Value="@(ThreadStandard.Trapezoidal)">Трапецеидальная 30° (Tr)</MudSelectItem>
+                <MudSelectItem Value="@(ThreadStandard.NPT)">Коническая 60° (K)</MudSelectItem>
             </MudSelect>
         </MudItem>
         <MudItem xs="12" sm="6">
@@ -125,12 +125,12 @@
             <MudExpansionPanel Text="Пример программы для Fanuc">
                 <MudItem xs="12">
                     <MudTextField Variant="Variant.Outlined" Style="font-family: 'Roboto Mono', monospace; font-size: small;" Margin="Margin.Dense" ReadOnly="true" Lines="3" Value="@($"G0 X{ApproachDiameter} Z{StartPointZ.NC()} S{SpindleSpeed.Round(100)} M3 G97\n" +
-                                $"G76 P0201{Thread.Profile(ThreadStandart)} Q{Passes[^2].Microns()} R{Passes[^1].NC()}\n" +
+                                $"G76 P0201{Thread.Profile(ThreadStandard)} Q{Passes[^2].Microns()} R{Passes[^1].NC()}\n" +
                                 $"G76 X{EndDiameter} Z{EndPointZ.NC()} P{(int)(Passes.Sum().Microns())} Q{Passes[0].Microns()}{ThreadShift} F{ThreadPitch.NC()}")">
                     </MudTextField>
                 </MudItem>
             </MudExpansionPanel>
-        @if(ThreadStandart == ThreadStandart.NPT)
+        @if(ThreadStandard == ThreadStandard.NPT)
         {
             <MudExpansionPanel Text="Пример проточки под резьбу">
                 <MudItem xs="12">
@@ -151,19 +151,19 @@
     {
         get
         {
-            if (ThreadStandart == ThreadStandart.Metric)
+            if (ThreadStandard == ThreadStandard.Metric)
             {
                 return Thread.MetricTemplates;
             }
-            else if (ThreadStandart == ThreadStandart.BSPP)
+            else if (ThreadStandard == ThreadStandard.BSPP)
             {
                 return Thread.BsppTemplates;
             }
-            else if (ThreadStandart == ThreadStandart.Trapezoidal)
+            else if (ThreadStandard == ThreadStandard.Trapezoidal)
             {
                 return Thread.TrapezoidalTemplates;
             }
-            else if (ThreadStandart == ThreadStandart.NPT)
+            else if (ThreadStandard == ThreadStandard.NPT)
             {
                 return Thread.NptTemplates;
             }
@@ -175,7 +175,7 @@
     }
     public string CurrentThreadTemplate { get; set; }
 
-    public ThreadStandart ThreadStandart { get; set; } = ThreadStandart.Metric;
+    public ThreadStandard ThreadStandard { get; set; } = ThreadStandard.Metric;
     public CuttingType ThreadType { get; set; } = CuttingType.External;
 
 
@@ -190,7 +190,7 @@
     {
         get
         {
-            if (ThreadStandart == ThreadStandart.NPT)
+            if (ThreadStandard == ThreadStandard.NPT)
             {
                 switch (ThreadType)
                 {
@@ -208,37 +208,37 @@
 
     public string TurningExample { get
         {
-            switch (ThreadStandart)
+            switch (ThreadStandard)
             {
-                case ThreadStandart.Metric:
+                case ThreadStandard.Metric:
                     switch (ThreadType)
                     {
                         case CuttingType.External:
-                            return $"G0 X{(ThreadDiameter - 2 * Thread.ThreadChamfer(ThreadStandart, ThreadPitch, ThreadType) - InsertRadius).NC()} Z1. S180 M3\n" + 
+                            return $"G0 X{(ThreadDiameter - 2 * Thread.ThreadChamfer(ThreadStandard, ThreadPitch, ThreadType) - InsertRadius).NC()} Z1. S180 M3\n" + 
                                    $"G1 Z0. F0.1\n" +
-                                   $"X{ThreadDiameter.NC()} C{(Thread.ThreadChamfer(ThreadStandart, ThreadPitch, ThreadType) + InsertRadius / 2).NC()}\n" +
+                                   $"X{ThreadDiameter.NC()} C{(Thread.ThreadChamfer(ThreadStandard, ThreadPitch, ThreadType) + InsertRadius / 2).NC()}\n" +
                                    $"G1 Z{EndPointZ.NC()}";
                         case CuttingType.Internal:
-                            return $"G0 X{(ThreadDiameter - ThreadPitch + 2 * Thread.ThreadChamfer(ThreadStandart, ThreadPitch, ThreadType) + InsertRadius).NC()} Z1. S180 M3\n" +
+                            return $"G0 X{(ThreadDiameter - ThreadPitch + 2 * Thread.ThreadChamfer(ThreadStandard, ThreadPitch, ThreadType) + InsertRadius).NC()} Z1. S180 M3\n" +
                                    $"G1 Z0. F0.1\n" +
-                                   $"X{(ThreadDiameter - ThreadPitch).NC()} C{(Thread.ThreadChamfer(ThreadStandart, ThreadPitch, ThreadType) + InsertRadius / 2).NC()}\n" +
+                                   $"X{(ThreadDiameter - ThreadPitch).NC()} C{(Thread.ThreadChamfer(ThreadStandard, ThreadPitch, ThreadType) + InsertRadius / 2).NC()}\n" +
                                    $"G1 Z{EndPointZ.NC()}";
                         default:
                             return string.Empty;
 
                     }
-                case ThreadStandart.NPT:
+                case ThreadStandard.NPT:
                     switch (ThreadType)
                     {
                         case CuttingType.External:
-                            return $"G0 X{(ThreadDiameter - 2 * (PlaneLength * Math.Tan(1.79.Radians())) - 2 * Thread.ThreadChamfer(ThreadStandart, ThreadPitch, ThreadType) - InsertRadius).NC()} Z1. S180 M3\n" +
+                            return $"G0 X{(ThreadDiameter - 2 * (PlaneLength * Math.Tan(1.79.Radians())) - 2 * Thread.ThreadChamfer(ThreadStandard, ThreadPitch, ThreadType) - InsertRadius).NC()} Z1. S180 M3\n" +
                                    $"G1 Z0. F0.1\n" +
-                                   $"X{(ThreadDiameter - 2 * (PlaneLength * Math.Tan(1.79.Radians()))).NC()} C{(Thread.ThreadChamfer(ThreadStandart, ThreadPitch, ThreadType) + InsertRadius / 2).NC()}\n" +
+                                   $"X{(ThreadDiameter - 2 * (PlaneLength * Math.Tan(1.79.Radians()))).NC()} C{(Thread.ThreadChamfer(ThreadStandard, ThreadPitch, ThreadType) + InsertRadius / 2).NC()}\n" +
                                    $"G1 Z{EndPointZ.NC()} A-1.79";
                         case CuttingType.Internal:
-                            return $"G0 X{(ThreadDiameter - 2 * Thread.ProfileHeight(ThreadStandart, ThreadType, ThreadPitch) + 2 * Thread.ThreadChamfer(ThreadStandart, ThreadPitch, ThreadType) + InsertRadius).NC()} Z1. S180 M3\n" +
+                            return $"G0 X{(ThreadDiameter - 2 * Thread.ProfileHeight(ThreadStandard, ThreadType, ThreadPitch) + 2 * Thread.ThreadChamfer(ThreadStandard, ThreadPitch, ThreadType) + InsertRadius).NC()} Z1. S180 M3\n" +
                                    $"G1 Z0. F0.1\n" +
-                                   $"X{(ThreadDiameter - 2 * Thread.ProfileHeight(ThreadStandart, ThreadType, ThreadPitch)).NC()} C{(Thread.ThreadChamfer(ThreadStandart, ThreadPitch, ThreadType) + InsertRadius / 2).NC()}\n" +
+                                   $"X{(ThreadDiameter - 2 * Thread.ProfileHeight(ThreadStandard, ThreadType, ThreadPitch)).NC()} C{(Thread.ThreadChamfer(ThreadStandard, ThreadPitch, ThreadType) + InsertRadius / 2).NC()}\n" +
                                    $"G1 Z{EndPointZ.NC()} A1.79";
                         default:
                             return string.Empty;
@@ -252,15 +252,15 @@
     //{
     //    get
     //    {
-    //        if (ThreadStandart == ThreadStandart.Metric)
+    //        if (ThreadStandard == ThreadStandard.Metric)
     //        {
     //            return "мм";
     //        }
-    //        else if (ThreadStandart == ThreadStandart.BSPP)
+    //        else if (ThreadStandard == ThreadStandard.BSPP)
     //        {
     //            return "TPI";
     //        }
-    //        else if (ThreadStandart == ThreadStandart.Trapezoidal)
+    //        else if (ThreadStandard == ThreadStandard.Trapezoidal)
     //        {
     //            return "мм";
     //        }
@@ -272,8 +272,8 @@
     //}
 
 
-    public double[] Passes => Thread.Passes(ThreadStandart, ThreadType, ThreadPitch);
-    public double[] TotalPasses => Thread.TotalPasses(ThreadStandart, ThreadType, ThreadPitch);
+    public double[] Passes => Thread.Passes(ThreadStandard, ThreadType, ThreadPitch);
+    public double[] TotalPasses => Thread.TotalPasses(ThreadStandard, ThreadType, ThreadPitch);
 
 
     public int SpindleSpeed => ((int)(120000 / (Math.PI * ThreadDiameter)));
@@ -299,7 +299,7 @@
         {
             if (Thread.Valid(ThreadDiameter, ThreadPitch))
             {
-                return Thread.ApproachDiameter(ThreadStandart, ThreadType, ThreadDiameter, ThreadPitch, EndPointZ, StartPointZ, PlaneLength).NC(1);
+                return Thread.ApproachDiameter(ThreadStandard, ThreadType, ThreadDiameter, ThreadPitch, EndPointZ, StartPointZ, PlaneLength).NC(1);
             }
             return string.Empty;
         }
@@ -311,7 +311,7 @@
         {
             if (Thread.Valid(ThreadDiameter, ThreadPitch))
             {
-                return Thread.EndDiameter(ThreadStandart, ThreadType, ThreadDiameter, ThreadPitch, EndPointZ, StartPointZ, PlaneLength).NC(2);
+                return Thread.EndDiameter(ThreadStandard, ThreadType, ThreadDiameter, ThreadPitch, EndPointZ, StartPointZ, PlaneLength).NC(2);
             }
             return string.Empty;
         }
@@ -322,11 +322,11 @@
 
     public double InsertRadius { get; set; } = 0.4;
 
-    private void OnStandartChanged(ThreadStandart value)
+    private void OnStandartChanged(ThreadStandard value)
     {
-        if (ThreadStandart != value)
+        if (ThreadStandard != value)
         {
-            ThreadStandart = value;
+            ThreadStandard = value;
             ThreadPitchString = string.Empty;
             ThreadDiameterString = string.Empty;
             CurrentThreadTemplate = null;
@@ -336,23 +336,23 @@
     private void OnTemplateChanged(string value)
     {
         CurrentThreadTemplate = value;
-        if (ThreadStandart == ThreadStandart.Metric)
+        if (ThreadStandard == ThreadStandard.Metric)
         {
             Thread.GetMetricValues(CurrentThreadTemplate, out string diameter, out string pitch);
             ThreadDiameterString = diameter;
             ThreadPitchString = pitch;
             PlaneLength = 0;
-            EndPointZ = -20 - Math.Round(Thread.ThreadRunout(ThreadStandart, ThreadPitch, ThreadType), 1);
+            EndPointZ = -20 - Math.Round(Thread.ThreadRunout(ThreadStandard, ThreadPitch, ThreadType), 1);
         }
-        else if (ThreadStandart == ThreadStandart.BSPP)
+        else if (ThreadStandard == ThreadStandard.BSPP)
         {
             Thread.GetBsppValues(CurrentThreadTemplate, out string diameter, out string pitch);
             ThreadDiameterString = diameter;
             ThreadPitchString = pitch;
             PlaneLength = 0;
-            EndPointZ = -20 - Math.Round(Thread.ThreadRunout(ThreadStandart, ThreadPitch, ThreadType), 1);
+            EndPointZ = -20 - Math.Round(Thread.ThreadRunout(ThreadStandard, ThreadPitch, ThreadType), 1);
         }
-        else if (ThreadStandart == ThreadStandart.Trapezoidal)
+        else if (ThreadStandard == ThreadStandard.Trapezoidal)
         {
             Thread.GetTrapezoidalValues(CurrentThreadTemplate, out string diameter, out string pitch);
             ThreadDiameterString = diameter;
@@ -360,13 +360,13 @@
             PlaneLength = 0;
             EndPointZ = -30;
         }
-        else if (ThreadStandart == ThreadStandart.NPT)
+        else if (ThreadStandard == ThreadStandard.NPT)
         {
             Thread.GetNptValues(CurrentThreadTemplate, out string externalDiameter, out string internalDiameter, out string pitch, out double planeLength, out double threadLength);
             ThreadDiameterString = externalDiameter;
             ThreadPitchString = pitch;
             PlaneLength = planeLength;
-            EndPointZ = -threadLength - Math.Round(Thread.ThreadRunout(ThreadStandart, ThreadPitch, ThreadType), 1);
+            EndPointZ = -threadLength - Math.Round(Thread.ThreadRunout(ThreadStandard, ThreadPitch, ThreadType), 1);
         }
     }
 }
