--- a/Sunduk.PWA/Components/Knowledge/FanucMacroVariables.razor
+++ b/Sunduk.PWA/Components/Knowledge/FanucMacroVariables.razor
@@ -18,17 +18,17 @@
                         <td class="text12">Нельзя переопределить, можно сравнивать.</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">#1 - #33</td>
+                        <td class="monotext14">#1&nbsp-&nbsp#33</td>
                         <td class="text14">Локальные</td>
                         <td class="text12">Своя область видимости для каждой подпрограммы, доступно 5 уровней вложения. Обнуление при завершении программы.</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">#100 - #199</td>
+                        <td class="monotext14">#100&nbsp-&nbsp#199</td>
                         <td class="text14" rowspan="2">Общие</td>
                         <td class="text12">Обнуление при сбросе УП / перезагрузке станка.</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">#500 - #999</td>
+                        <td class="monotext14">#500&nbsp-&nbsp#999</td>
                         <td class="text12">Значение сохраняется при сбросе УП / перезагрузке станка.</td>
                     </tr>
                     <tr>
@@ -122,15 +122,15 @@
                         <td class="text14">Экспонента</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">[#1EQ1] AND [#2EQ1]</td>
+                        <td class="monotext14">[#1EQ1]&nbspAND&nbsp[#2EQ1]</td>
                         <td class="text14">Логическое "И"</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">[#1=1] OR [#2=1]</td>
+                        <td class="monotext14">[#1=1]&nbspOR&nbsp[#2=1]</td>
                         <td class="text14">Логическое "ИЛИ"</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">[#1=1] XOR [#2=1]</td>
+                        <td class="monotext14">[#1=1]&nbspXOR&nbsp[#2=1]</td>
                         <td class="text14">Исключающее "ИЛИ"</td>
                     </tr>
                     </tbody>
@@ -155,28 +155,28 @@
                         <th colspan="2">Операторы сравнения</th>
                     </tr>
                     <tr>
-                        <td class="monotext14">#1 EQ 1</td>
+                        <td class="monotext14">#1&nbspEQ&nbsp1</td>
                         <td class="text14">Равно</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">#1 NE 1</td>
+                        <td class="monotext14">#1&nbspNE&nbsp1</td>
                         <td class="text14">Не равно</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">#1 GT 1</td>
+                        <td class="monotext14">#1&nbspGT&nbsp1</td>
                         <td class="text14">Больше</td>
                     </tr>
                     <tr>
 
-                        <td class="monotext14">#1 LT 1</td>
+                        <td class="monotext14">#1&nbspLT&nbsp1</td>
                         <td class="text14">Меньше</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">#1 GE 1</td>
+                        <td class="monotext14">#1&nbspGE&nbsp1</td>
                         <td class="text14">Больше или равно</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">#1 LE 1</td>
+                        <td class="monotext14">#1&nbspLE&nbsp1</td>
                         <td class="text14">Меньше или равно</td>
                     </tr>
                     <tr>
