--- a/Sunduk.PWA/Components/Knowledge/FanucMacroVariables.razor
+++ b/Sunduk.PWA/Components/Knowledge/FanucMacroVariables.razor
@@ -18,18 +18,18 @@
                         <td class="text12">Нельзя переопределить, можно сравнивать.</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">#1&nbsp-&nbsp#33</td>
+                        <td class="monotext14">#1-#33</td>
                         <td class="text14">Локальные</td>
                         <td class="text12">Своя область видимости для каждой подпрограммы, доступно 5 уровней вложения. Обнуление при завершении программы.</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">#100&nbsp-&nbsp#199</td>
+                        <td class="monotext14">#100-#199</td>
                         <td class="text14" rowspan="2">Общие</td>
-                        <td class="text12">Обнуление при сбросе УП / перезагрузке станка.</td>
+                        <td class="text12">Обнуление при завершении программы.</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">#500&nbsp-&nbsp#999</td>
-                        <td class="text12">Значение сохраняется при сбросе УП / перезагрузке станка.</td>
+                        <td class="monotext14">#500-#999</td>
+                        <td class="text12">Значение сохраняется до перезаписи.</td>
                     </tr>
                     <tr>
                         <td class="monotext14">#1000+</td>
@@ -50,87 +50,87 @@
                     </thead>
                     <tbody>
                     <tr>
-                        <td class="monotext14">#1 = 1</td>
+                        <td class="monotext14">#1=1</td>
                         <td class="text14">Присвоение</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">#1 = #1 + #2</td>
+                        <td class="monotext14">#1=#1+#2</td>
                         <td class="text14">Сложение</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">#1 = #1 - #2</td>
+                        <td class="monotext14">#1=#1-#2</td>
                         <td class="text14">Вычитание</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">#1 = #1 * #2</td>
+                        <td class="monotext14">#1=#1*#2</td>
                         <td class="text14">Умножение</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">#1 = #1 / #2</td>
+                        <td class="monotext14">#1=#1/#2</td>
                         <td class="text14">Деление</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">#1 = SIN[#2]</td>
+                        <td class="monotext14">#1=SIN[#2]</td>
                         <td class="text14">Синус</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">#1 = ASIN[#2]</td>
+                        <td class="monotext14">#1=ASIN[#2]</td>
                         <td class="text14">Арксинус</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">#1 = COS[#2]</td>
+                        <td class="monotext14">#1=COS[#2]</td>
                         <td class="text14">Косинус</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">#1 = ACOS[#2]</td>
+                        <td class="monotext14">#1=ACOS[#2]</td>
                         <td class="text14">Арккосинус</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">#1 = TAN[#2]</td>
+                        <td class="monotext14">#1=TAN[#2]</td>
                         <td class="text14">Тангенс</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">#1 = ATAN[#2]</td>
+                        <td class="monotext14">#1=ATAN[#2]</td>
                         <td class="text14">Арктангенс</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">#1 = SQRT[#2]</td>
+                        <td class="monotext14">#1=SQRT[#2]</td>
                         <td class="text14">Квадратный корень</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">#1 = ABS[#2]</td>
+                        <td class="monotext14">#1=ABS[#2]</td>
                         <td class="text14">Абсолютное значение (модуль)</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">#1 = ROUND[#2]</td>
+                        <td class="monotext14">#1=ROUND[#2]</td>
                         <td class="text14">Округление</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">#1 = FIX[#2]</td>
+                        <td class="monotext14">#1=FIX[#2]</td>
                         <td class="text14">Округление в меньшую сторону</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">#1 = FUP[#2]</td>
+                        <td class="monotext14">#1=FUP[#2]</td>
                         <td class="text14">Округление в большую сторону</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">#1 = LN[#2]</td>
+                        <td class="monotext14">#1=LN[#2]</td>
                         <td class="text14">Логарифм</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">#1 = EXP[#2]</td>
+                        <td class="monotext14">#1=EXP[#2]</td>
                         <td class="text14">Экспонента</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">[#1EQ1]&nbspAND&nbsp[#2EQ1]</td>
+                        <td class="monotext14">[#1EQ1]AND[#2EQ1]</td>
                         <td class="text14">Логическое "И"</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">[#1=1]&nbspOR&nbsp[#2=1]</td>
+                        <td class="monotext14">[#1EQ1]OR[#1EQ1]</td>
                         <td class="text14">Логическое "ИЛИ"</td>
                     </tr>
                     <tr>
-                        <td class="monotext14">[#1=1]&nbspXOR&nbsp[#2=1]</td>
+                        <td class="monotext14">[#1EQ1]XOR[#1EQ1]</td>
                         <td class="text14">Исключающее "ИЛИ"</td>
                     </tr>
                     </tbody>
