--- a/Sunduk.PWA/Components/Stuff/ChamferComponent.razor
+++ b/Sunduk.PWA/Components/Stuff/ChamferComponent.razor
@@ -326,7 +326,7 @@
         InternalEndDiameter,
         InternalToolRadius,
     };
-    //public enum ImageType { Diameter, ToolRaduis, ChamferAngle, ChamferSize };
+    //public enum ImageType { Diameter, ToolRadius, ChamferAngle, ChamferSize };
     public Images CurrentImage { get; set; } = Images.ExternalChamfer;
 
     private string _chamferEndDiameter;
