--- a/Sunduk.PWA/wwwroot/css/site.css
+++ b/Sunduk.PWA/wwwroot/css/site.css
@@ -5,9 +5,17 @@
     font-family: 'Roboto Mono', monospace;
 }
 
+
 .monotext14 {
     font-family: 'Roboto Mono', monospace;
     font-size: 14px;
+    padding-right: 10px;
+    padding-left: 5px
+}
+
+.monotext12 {
+    font-family: 'Roboto Mono', monospace;
+    font-size: 12px;
     padding-right: 10px;
     padding-left: 5px
 }
